# G4HadStudies

./: CMakeLists.txt  README.md  anti_proton.in  g4had.cc  gamma.in  init_vis.mac  kaon+.in  kaon-.in  neutron.in  pi+.in  pi-.in  proton.in  run.sh
data/: G4_gammap.txt  G4_kaon+p.txt  G4_kaon-p.txt  G4_neutronp.txt  G4_pbarp.txt  G4_pi+p.txt  G4_pi-p.txt  G4_pp.txt  G4_sigma-p.txt  dEdx.C  muE_argon_gas_Ar.txt  muE_liquid_argon.txt  read.C
include/: HadAnalysis.hh  HadAnalysisMessenger.hh  HadDetectorConstruction.hh  HadDetectorMessenger.hh  HadEventAction.hh  HadPrimaryGeneratorAction.hh  HadSD.hh  Linkdef.h  ProdTuple_t.hh
productionscripts/: combineplots1.C  make_Inputs.py  master.sh  nucleons_lAr.C  readtuple2.C
scripts/: kaon_comp.C  kaon_xs.C  makeInputs.py  makePi+Inputs.py  pion_xs.C  readall.C
src/: CMakeLists.txt  HadAnalysis.cc  HadAnalysisMessenger.cc  HadDetectorConstruction.cc  HadDetectorMessenger.cc  HadEventAction.cc  HadEventActionMessenger.cc  HadPrimaryGeneratorAction.cc  HadRunAction.cc  HadSD.cc  HadStackingAction.cc  ProdTuple_t.cc  README  TrackInfo_t.cc  g4had.cc
src/include/: HadAnalysis.hh  HadEventActionMessenger.hh  HadPrimaryGeneratorAction.hh  HadRunAction.hh  HadStackingAction.hh  TrackInfo_t.hh
src/scripts/: makeInputs.py  makePi-Inputs.py  pion_comp.C
